--- a/index.html
+++ b/index.html
@@ -1,237 +1,386 @@
 <!DOCTYPE html>
-<html lang="uk">
+<html lang="en">
 	<head>
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>All my homework</title>
+
+		<title>BA_Homework</title>
+
+		<link
+			rel="apple-touch-icon"
+			sizes="57x57"
+			href="assets/img/favicon/apple-icon-57x57.png"
+		/>
+		<link
+			rel="apple-touch-icon"
+			sizes="60x60"
+			href="assets/img/favicon/apple-icon-60x60.png"
+		/>
+		<link
+			rel="apple-touch-icon"
+			sizes="72x72"
+			href="assets/img/favicon/apple-icon-72x72.png"
+		/>
+		<link
+			rel="apple-touch-icon"
+			sizes="76x76"
+			href="assets/img/favicon/apple-icon-76x76.png"
+		/>
+		<link
+			rel="apple-touch-icon"
+			sizes="114x114"
+			href="assets/img/favicon/apple-icon-114x114.png"
+		/>
+		<link
+			rel="apple-touch-icon"
+			sizes="120x120"
+			href="assets/img/favicon/apple-icon-120x120.png"
+		/>
+		<link
+			rel="apple-touch-icon"
+			sizes="144x144"
+			href="assets/img/favicon/apple-icon-144x144.png"
+		/>
+		<link
+			rel="apple-touch-icon"
+			sizes="152x152"
+			href="assets/img/favicon/apple-icon-152x152.png"
+		/>
+		<link
+			rel="apple-touch-icon"
+			sizes="180x180"
+			href="assets/img/favicon/apple-icon-180x180.png"
+		/>
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="192x192"
+			href="assets/img/favicon/android-icon-192x192.png"
+		/>
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="32x32"
+			href="assets/img/favicon/favicon-32x32.png"
+		/>
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="96x96"
+			href="assets/img/favicon/favicon-96x96.png"
+		/>
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="16x16"
+			href="assets/img/favicon/favicon-16x16.png"
+		/>
+		<link rel="manifest" href="assets/img/favicon/manifest.json" />
+		<meta name="msapplication-TileColor" content="#ffffff" />
+		<meta
+			name="msapplication-TileImage"
+			content="assets/img/favicon/ms-icon-144x144.png"
+		/>
+		<meta name="theme-color" content="#ffffff" />
+
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+			rel="stylesheet"
+		/>
+
+		<link rel="stylesheet" href="assets/css/style.css" />
 	</head>
 
-	<body>
-		<header>
-			<h3>This page contains links to all my homework</h3>
-
-			<span>
-				<i>This ugly design will be changed. Sometime ...</i>
-			</span>
-
-			<hr />
+	<body class="body">
+		<header class="header">
+			<div class="header__container">
+				<div class="header__wrapper">
+					<h1 class="header__title">
+						This page contains links to all my homework
+					</h1>
+					<div class="header__theme"></div>
+				</div>
+			</div>
 		</header>
+		<main class="main">
+			<div class="main__container">
+				<div class="main__wrapper">
+					<div class="main__content content">
+						<div class="content__wrapper">
+							<div class="content__container"></div>
+						</div>
+					</div>
+					<div class="main__navigation navigation">
+						<div class="navigation__container">
+							<h2 class="navigation__title">BA_Homework</h2>
 
-		<main>
-			<h1>Homework`s links:</h1>
-
-			<ul>
-				<li>
-					<a
-						style="text-decoration: none; color: black;"
-						href="CV/"
-						target="_blank"
-						>Homework_01 (CV)</a
-					>
-				</li>
-
-				<li>
-					<a
-						style="text-decoration: none; color: black;"
-						href="IT/"
-						target="_blank"
-						>Homework_02 (IT)</a
-					>
-				</li>
-
-				<li>
-					<a
-						style="text-decoration: none; color: black;"
-						href="FORMS/"
-						target="_blank"
-						>Homework_03 (FORMS)</a
-					>
-				</li>
-
-				<li>
-					<a
-						style="text-decoration: none; color: black;"
-						href="Denis_Novik/"
-						target="_blank"
-						>Homework_04 (Denis Novik Landing Page)</a
-					>
-				</li>
-
-				<li>
-					<a
-						style="text-decoration: none; color: black;"
-						href="DN_NewDesign/"
-						target="_blank"
-						>Homework_05 (Denis Novik New Design)</a
-					>
-				</li>
-
-				<li>
-					<a
-						style="text-decoration: none; color: black;"
-						href="Shopping_List/"
-						target="_blank"
-						>Homework_06 (Shopping List)</a
-					>
-				</li>
-
-				<li>
-					<a
-						style="text-decoration: none; color: black;"
-						href="Productly_landing/"
-						target="_blank"
-						>Homework_07 (Productly_landing)</a
-					>
-				</li>
-
-				<li>
-					<a
-						style="text-decoration: none; color: black;"
-						href="Weather_Forecast/"
-						target="_blank"
-						>Homework_08 (Weather Forecast)</a
-					>
-				</li>
-
-				<li>
-					<a
-						style="text-decoration: none; color: black;"
-						href="Photography/"
-						target="_blank"
-						>Homework_09 (Photography)</a
-					>
-				</li>
-
-				<li>
-					<a
-						style="text-decoration: none; color: black;"
-						href="ITlife/"
-						target="_blank"
-						>Homework_10 (ITlife)</a
-					>
-				</li>
-				<li>
-					<a
-						style="text-decoration: none; color: black;"
-						href="Web_Fonts/"
-						target="_blank"
-						>Homework_11 (Web Fonts)</a
-					>
-				</li>
-				<li>
-					<a
-						style="text-decoration: none; color: black;"
-						href="Konstruct/"
-						target="_blank"
-						>Homework_12 (Konstruct)</a
-					>
-				</li>
-				<li>
-					<a
-						style="text-decoration: none; color: black;"
-						href="Whos_using/"
-						target="_blank"
-						>Homework_13 (Who`s using)</a
-					>
-				</li>
-				<li>
-					<a
-						style="text-decoration: none; color: black;"
-						href="Freehand/"
-						target="_blank"
-						>Homework_14 (Freehand)</a
-					>
-				</li>
-				<li>
-					<a
-						style="text-decoration: none; color: black;"
-						href="SVG_creation/"
-						target="_blank"
-						>Homework_15 (SVG)</a
-					>
-				</li>
-				<li>
-					<a
-						style="text-decoration: none; color: black;"
-						href="Card_Deck/"
-						target="_blank"
-						>Homework_16 (Cards)</a
-					>
-				</li>
-				<li>
-					<a
-						style="text-decoration: none; color: black;"
-						href="Our_team/"
-						target="_blank"
-						>Homework_17 (Out Team)</a
-					>
-				</li>
-				<li>
-					<a
-						style="text-decoration: none; color: black;"
-						href="First_Manifest/"
-						target="_blank"
-						>Homework_18 (First_Manifest)</a
-					>
-				</li>
-				<li>
-					<a
-						style="text-decoration: none; color: black;"
-						href="Second_Manifest/"
-						target="_blank"
-						>Homework_19 (Second_Manifest)</a
-					>
-				</li>
-				<li>
-					<a
-						style="text-decoration: none; color: black;"
-						href="Forms_2-0/"
-						target="_blank"
-						>Homework_20 (Forms_new_style)</a
-					>
-				</li>
-				<li>
-					<a
-						style="text-decoration: none; color: black;"
-						href="Navigation/"
-						target="_blank"
-						>Homework_21 (Navigation)</a
-					>
-				</li>
-				<li>
-					<a
-						style="text-decoration: none; color: black;"
-						href="Solis__Project__1/"
-						target="_blank"
-						>Homework_22 (Project Solis)</a
-					>
-				</li>
-				<li>
-					<a
-						style="text-decoration: none; color: black;"
-						href="Pricing/"
-						target="_blank"
-						>Homework_23 (Pricing)</a
-					>
-				</li>
-				<li>
-					<a
-						style="text-decoration: none; color: black;"
-						href="Photoshop/"
-						target="_blank"
-						>Homework_24 (Photoshop)</a
-					>
-				</li>
-				<li>
-					<a
-						style="text-decoration: none; color: black;"
-						href="Productly__new/"
-						target="_blank"
-						>Homework_25 (Productly__full_scss)</a
-					>
-				</li>
-			</ul>
+							<div class="navigation__wrapper">
+								<div class="main__menu menu">
+									<h2 class="menu__title">html</h2>
+									<nav class="menu__nav">
+										<ul class="menu__list">
+											<li class="menu__item">
+												<a
+													class="menu__link"
+													href="CV/"
+													target="_blank"
+													>Homework_01 (CV)</a
+												>
+											</li>
+											<li class="menu__item">
+												<a
+													class="menu__link"
+													href="IT/"
+													target="_blank"
+													>Homework_02 (IT)</a
+												>
+											</li>
+											<li class="menu__item">
+												<a
+													class="menu__link"
+													href="FORMS/"
+													target="_blank"
+													>Homework_03 (FORMS)</a
+												>
+											</li>
+											<li class="menu__item">
+												<a
+													class="menu__link"
+													href="Denis_Novik/"
+													target="_blank"
+													>Homework_04 (Denis Novik
+													Landing Page)</a
+												>
+											</li>
+											<li class="menu__item">
+												<a
+													class="menu__link"
+													href="DN_NewDesign/"
+													target="_blank"
+													>Homework_05 (Denis Novik
+													New Design)</a
+												>
+											</li>
+											<li class="menu__item">
+												<a
+													class="menu__link"
+													href="Shopping_List/"
+													target="_blank"
+													>Homework_06 (Shopping
+													List)</a
+												>
+											</li>
+											<li class="menu__item">
+												<a
+													class="menu__link"
+													href="Productly_landing/"
+													target="_blank"
+													>Homework_07
+													(Productly_landing)</a
+												>
+											</li>
+											<li class="menu__item">
+												<a
+													class="menu__link"
+													href="Weather_Forecast/"
+													target="_blank"
+													>Homework_08 (Weather
+													Forecast)</a
+												>
+											</li>
+											<li class="menu__item">
+												<a
+													class="menu__link"
+													href="Photography/"
+													target="_blank"
+													>Homework_09
+													(Photography)</a
+												>
+											</li>
+											<li class="menu__item">
+												<a
+													class="menu__link"
+													href="ITlife/"
+													target="_blank"
+													>Homework_10 (ITlife)</a
+												>
+											</li>
+											<li class="menu__item">
+												<a
+													class="menu__link"
+													href="Web_Fonts/"
+													target="_blank"
+													>Homework_11 (Web Fonts)</a
+												>
+											</li>
+											<li class="menu__item">
+												<a
+													class="menu__link"
+													href="Konstruct/"
+													target="_blank"
+													>Homework_12 (Konstruct)</a
+												>
+											</li>
+											<li class="menu__item">
+												<a
+													class="menu__link"
+													href="Whos_using/"
+													target="_blank"
+													>Homework_13 (Who`s
+													using)</a
+												>
+											</li>
+											<li class="menu__item">
+												<a
+													class="menu__link"
+													href="Freehand/"
+													target="_blank"
+													>Homework_14 (Freehand)</a
+												>
+											</li>
+											<li class="menu__item">
+												<a
+													class="menu__link"
+													href="SVG_creation/"
+													target="_blank"
+													>Homework_15 (SVG)</a
+												>
+											</li>
+											<li class="menu__item">
+												<a
+													class="menu__link"
+													href="Card_Deck/"
+													target="_blank"
+													>Homework_16 (Cards)</a
+												>
+											</li>
+											<li class="menu__item">
+												<a
+													class="menu__link"
+													href="Our_team/"
+													target="_blank"
+													>Homework_17 (Out Team)</a
+												>
+											</li>
+											<li class="menu__item">
+												<a
+													class="menu__link"
+													href="First_Manifest/"
+													target="_blank"
+													>Homework_18
+													(First_Manifest)</a
+												>
+											</li>
+											<li class="menu__item">
+												<a
+													class="menu__link"
+													href="Second_Manifest/"
+													target="_blank"
+													>Homework_19
+													(Second_Manifest)</a
+												>
+											</li>
+											<li class="menu__item">
+												<a
+													class="menu__link"
+													href="Forms_2-0/"
+													target="_blank"
+													>Homework_20
+													(Forms_new_style)</a
+												>
+											</li>
+											<li class="menu__item">
+												<a
+													class="menu__link"
+													href="Navigation/"
+													target="_blank"
+													>Homework_21 (Navigation)</a
+												>
+											</li>
+											<li class="menu__item">
+												<a
+													class="menu__link"
+													href="Solis__Project__1/"
+													target="_blank"
+													>Homework_22 (Project
+													Solis)</a
+												>
+											</li>
+											<li class="menu__item">
+												<a
+													class="menu__link"
+													href="Pricing/"
+													target="_blank"
+													>Homework_23 (Pricing)</a
+												>
+											</li>
+											<li class="menu__item">
+												<a
+													class="menu__link"
+													href="Photoshop/"
+													target="_blank"
+													>Homework_24 (Photoshop)</a
+												>
+											</li>
+											<li class="menu__item">
+												<a
+													class="menu__link"
+													href="Productly__new/"
+													target="_blank"
+													>Homework_25
+													(Productly__full_scss)</a
+												>
+											</li>
+										</ul>
+									</nav>
+								</div>
+								<div class="main__menu menu">
+									<h2 class="menu__title">js</h2>
+									<nav class="menu__nav">
+										<ul class="menu__list">
+											<li class="menu__item">
+												<a
+													class="menu__link"
+													href="#"
+													target="_blank"
+													>Homework_js_01</a
+												>
+											</li>
+											<li class="menu__item">
+												<a
+													class="menu__link"
+													href="#"
+													target="_blank"
+													>Homework_js_02</a
+												>
+											</li>
+											<li class="menu__item">
+												<a
+													class="menu__link"
+													href="#"
+													target="_blank"
+													>Homework_js_03</a
+												>
+											</li>
+										</ul>
+									</nav>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 		</main>
+
+		<footer class="footer">
+			<footer class="container">
+				<footer class="wrapper"></footer>
+			</footer>
+		</footer>
+
+		<script src="assets/js/script.js"></script>
 	</body>
 </html>
