--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 			<div class="header__container">
 				<div class="header__wrapper">
 					<h1 class="header__title">
-						This page contains links to all my homework
+						This page contains links to all homework
 					</h1>
 					<div class="header__theme"></div>
 				</div>
@@ -110,12 +110,16 @@
 				<div class="main__wrapper">
 					<div class="main__content content">
 						<div class="content__wrapper">
-							<div class="content__container"></div>
+							<div class="content__container">
+								<h3 class="content__title">
+									This feature is coming soon...
+								</h3>
+							</div>
 						</div>
 					</div>
 					<div class="main__navigation navigation">
 						<div class="navigation__container">
-							<h2 class="navigation__title">BA_Homework</h2>
+							<h2 class="navigation__title">Homework</h2>
 
 							<div class="navigation__wrapper">
 								<div class="main__menu menu">
@@ -127,7 +131,7 @@
 													class="menu__link"
 													href="CV/"
 													target="_blank"
-													>Homework_01 (CV)</a
+													>Curriculum vitae</a
 												>
 											</li>
 											<li class="menu__item">
@@ -135,7 +139,7 @@
 													class="menu__link"
 													href="IT/"
 													target="_blank"
-													>Homework_02 (IT)</a
+													>IT start</a
 												>
 											</li>
 											<li class="menu__item">
@@ -143,7 +147,7 @@
 													class="menu__link"
 													href="FORMS/"
 													target="_blank"
-													>Homework_03 (FORMS)</a
+													>Forms</a
 												>
 											</li>
 											<li class="menu__item">
@@ -151,8 +155,7 @@
 													class="menu__link"
 													href="Denis_Novik/"
 													target="_blank"
-													>Homework_04 (Denis Novik
-													Landing Page)</a
+													>Denis Novik landing</a
 												>
 											</li>
 											<li class="menu__item">
@@ -160,8 +163,8 @@
 													class="menu__link"
 													href="DN_NewDesign/"
 													target="_blank"
-													>Homework_05 (Denis Novik
-													New Design)</a
+													>Denis Novik landing
+													(redesign)</a
 												>
 											</li>
 											<li class="menu__item">
@@ -169,8 +172,7 @@
 													class="menu__link"
 													href="Shopping_List/"
 													target="_blank"
-													>Homework_06 (Shopping
-													List)</a
+													>Shopping List</a
 												>
 											</li>
 											<li class="menu__item">
@@ -178,8 +180,7 @@
 													class="menu__link"
 													href="Productly_landing/"
 													target="_blank"
-													>Homework_07
-													(Productly_landing)</a
+													>Productly landing</a
 												>
 											</li>
 											<li class="menu__item">
@@ -187,8 +188,7 @@
 													class="menu__link"
 													href="Weather_Forecast/"
 													target="_blank"
-													>Homework_08 (Weather
-													Forecast)</a
+													>Weather Forecast</a
 												>
 											</li>
 											<li class="menu__item">
@@ -196,8 +196,8 @@
 													class="menu__link"
 													href="Photography/"
 													target="_blank"
-													>Homework_09
-													(Photography)</a
+												>
+													Photography</a
 												>
 											</li>
 											<li class="menu__item">
@@ -205,7 +205,7 @@
 													class="menu__link"
 													href="ITlife/"
 													target="_blank"
-													>Homework_10 (ITlife)</a
+													>IT-Life</a
 												>
 											</li>
 											<li class="menu__item">
@@ -213,7 +213,7 @@
 													class="menu__link"
 													href="Web_Fonts/"
 													target="_blank"
-													>Homework_11 (Web Fonts)</a
+													>Web Fonts</a
 												>
 											</li>
 											<li class="menu__item">
@@ -221,7 +221,7 @@
 													class="menu__link"
 													href="Konstruct/"
 													target="_blank"
-													>Homework_12 (Konstruct)</a
+													>Konstruct</a
 												>
 											</li>
 											<li class="menu__item">
@@ -229,8 +229,7 @@
 													class="menu__link"
 													href="Whos_using/"
 													target="_blank"
-													>Homework_13 (Who`s
-													using)</a
+													>Who`s using</a
 												>
 											</li>
 											<li class="menu__item">
@@ -238,7 +237,7 @@
 													class="menu__link"
 													href="Freehand/"
 													target="_blank"
-													>Homework_14 (Freehand)</a
+													>Freehand</a
 												>
 											</li>
 											<li class="menu__item">
@@ -246,7 +245,7 @@
 													class="menu__link"
 													href="SVG_creation/"
 													target="_blank"
-													>Homework_15 (SVG)</a
+													>SVG creation</a
 												>
 											</li>
 											<li class="menu__item">
@@ -254,7 +253,7 @@
 													class="menu__link"
 													href="Card_Deck/"
 													target="_blank"
-													>Homework_16 (Cards)</a
+													>Cards</a
 												>
 											</li>
 											<li class="menu__item">
@@ -262,7 +261,7 @@
 													class="menu__link"
 													href="Our_team/"
 													target="_blank"
-													>Homework_17 (Out Team)</a
+													>Our Team</a
 												>
 											</li>
 											<li class="menu__item">
@@ -270,8 +269,7 @@
 													class="menu__link"
 													href="First_Manifest/"
 													target="_blank"
-													>Homework_18
-													(First_Manifest)</a
+													>First Manifest</a
 												>
 											</li>
 											<li class="menu__item">
@@ -279,8 +277,7 @@
 													class="menu__link"
 													href="Second_Manifest/"
 													target="_blank"
-													>Homework_19
-													(Second_Manifest)</a
+													>Second Manifest</a
 												>
 											</li>
 											<li class="menu__item">
@@ -288,8 +285,7 @@
 													class="menu__link"
 													href="Forms_2-0/"
 													target="_blank"
-													>Homework_20
-													(Forms_new_style)</a
+													>Forms (redesign)</a
 												>
 											</li>
 											<li class="menu__item">
@@ -297,16 +293,7 @@
 													class="menu__link"
 													href="Navigation/"
 													target="_blank"
-													>Homework_21 (Navigation)</a
-												>
-											</li>
-											<li class="menu__item">
-												<a
-													class="menu__link"
-													href="Solis__Project__1/"
-													target="_blank"
-													>Homework_22 (Project
-													Solis)</a
+													>Navigation</a
 												>
 											</li>
 											<li class="menu__item">
@@ -314,7 +301,7 @@
 													class="menu__link"
 													href="Pricing/"
 													target="_blank"
-													>Homework_23 (Pricing)</a
+													>Pricing</a
 												>
 											</li>
 											<li class="menu__item">
@@ -322,7 +309,7 @@
 													class="menu__link"
 													href="Photoshop/"
 													target="_blank"
-													>Homework_24 (Photoshop)</a
+													>Photoshop</a
 												>
 											</li>
 											<li class="menu__item">
@@ -330,8 +317,24 @@
 													class="menu__link"
 													href="Productly__new/"
 													target="_blank"
-													>Homework_25
-													(Productly__full_scss)</a
+													>Productly (redesign)</a
+												>
+											</li>
+										</ul>
+									</nav>
+									<h2
+										class="menu__title menu__title--project"
+									>
+										html projects
+									</h2>
+									<nav class="menu__nav">
+										<ul class="menu__list">
+											<li class="menu__item">
+												<a
+													class="menu__link"
+													href="Solis__Project__1/"
+													target="_blank"
+													>Project Solis</a
 												>
 											</li>
 										</ul>
@@ -367,6 +370,16 @@
 											</li>
 										</ul>
 									</nav>
+									<h2
+										class="menu__title menu__title--project"
+									>
+										js projects
+									</h2>
+									<nav class="menu__nav">
+										<ul class="menu__list">
+											<li class="menu__item"></li>
+										</ul>
+									</nav>
 								</div>
 							</div>
 						</div>
@@ -374,12 +387,6 @@
 				</div>
 			</div>
 		</main>
-
-		<footer class="footer">
-			<footer class="container">
-				<footer class="wrapper"></footer>
-			</footer>
-		</footer>
 
 		<script src="assets/js/script.js"></script>
 	</body>
