--- a/index.html
+++ b/index.html
@@ -120,7 +120,6 @@
 					<div class="main__navigation navigation">
 						<div class="navigation__container">
 							<h2 class="navigation__title">Homework</h2>
-
 							<div class="navigation__wrapper">
 								<div class="main__menu menu">
 									<h2 class="menu__title">html</h2>
@@ -347,7 +346,7 @@
 											<li class="menu__item">
 												<a
 													class="menu__link"
-													href="#"
+													href="JS__HW__01/"
 													target="_blank"
 													>Homework_js_01</a
 												>
