--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
 											<li class="menu__item">
 												<a
 													class="menu__link"
-													href="#"
+													href="JS__HW__02/"
 													target="_blank"
 													>Homework_js_02</a
 												>
