--- a/index.html
+++ b/index.html
@@ -321,23 +321,6 @@
 											</li>
 										</ul>
 									</nav>
-									<h2
-										class="menu__title menu__title--project"
-									>
-										html projects
-									</h2>
-									<nav class="menu__nav">
-										<ul class="menu__list">
-											<li class="menu__item">
-												<a
-													class="menu__link"
-													href="Solis__Project__1/"
-													target="_blank"
-													>Project Solis</a
-												>
-											</li>
-										</ul>
-									</nav>
 								</div>
 								<div class="main__menu menu">
 									<h2 class="menu__title">js</h2>
@@ -369,14 +352,21 @@
 											</li>
 										</ul>
 									</nav>
-									<h2
-										class="menu__title menu__title--project"
-									>
-										js projects
+								</div>
+								<div class="main__menu menu">
+									<h2 class="menu__title">
+										projects
 									</h2>
 									<nav class="menu__nav">
 										<ul class="menu__list">
-											<li class="menu__item"></li>
+											<li class="menu__item">
+												<a
+													class="menu__link"
+													href="Solis__Project__1/"
+													target="_blank"
+													>Project Solis</a
+												>
+											</li>
 										</ul>
 									</nav>
 								</div>
