--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
 											<li class="menu__item">
 												<a
 													class="menu__link"
-													href="#"
+													href="JS__HW__03/"
 													target="_blank"
 													>Homework_js_03</a
 												>
