--- a/index.html
+++ b/index.html
@@ -350,6 +350,14 @@
 													>Homework_js_03</a
 												>
 											</li>
+											<li class="menu__item">
+												<a
+													class="menu__link"
+													href="JS__HW__04/"
+													target="_blank"
+													>Homework_js_04</a
+												>
+											</li>
 										</ul>
 									</nav>
 								</div>
