objects js added

--- a/index.html
+++ b/index.html
@@ -358,6 +358,14 @@
 													>Homework_js_04</a
 												>
 											</li>
+											<li class="menu__item">
+												<a
+													class="menu__link"
+													href="JS__HW__05/"
+													target="_blank"
+													>Homework_js_05</a
+												>
+											</li>
 										</ul>
 									</nav>
 								</div>
