--- a/index.html
+++ b/index.html
@@ -388,7 +388,15 @@
 													class="menu__link"
 													href="Solis__Project__1/"
 													target="_blank"
-													>Project Solis</a
+													>Solis</a
+												>
+											</li>
+											<li class="menu__item">
+												<a
+													class="menu__link"
+													href="Monticello__Project__2/"
+													target="_blank"
+													>Monticello</a
 												>
 											</li>
 										</ul>
