--- a/index.html
+++ b/index.html
@@ -374,6 +374,14 @@
 													>Homework_js_06</a
 												>
 											</li>
+											<li class="menu__item">
+												<a
+													class="menu__link"
+													href="JS__HW__07/"
+													target="_blank"
+													>Homework_js_07</a
+												>
+											</li>
 										</ul>
 									</nav>
 								</div>
