--- a/Monticello__Project__2/index.html
+++ b/Monticello__Project__2/index.html
@@ -971,43 +971,43 @@
 									</picture>
 								</a>
 							</div>
-							<div class="footer__social social">
-								<div class="social__wrapper">
+							<div class="footer__social fSocial">
+								<div class="fSocial__wrapper">
 									<a
-										class="social__link facebook"
+										class="fSocial__link facebook"
 										href="https://www.facebook.com/"
 										target="_blank"
 										rel="noindex, nofollow, noreferrer, noopener"
 									>
-										<svg class="social__svg">
+										<svg class="fSocial__svg">
 											<use
-												class="social__icon"
+												class="fSocial__icon"
 												xlink:href="assets/img/sprite.svg#facebook"
 											></use>
 										</svg>
 									</a>
 									<a
-										class="social__link twitter"
+										class="fSocial__link twitter"
 										href="https://twitter.com/"
 										target="_blank"
 										rel="noindex, nofollow, noreferrer, noopener"
 									>
-										<svg class="social__svg">
+										<svg class="fSocial__svg">
 											<use
-												class="social__icon"
+												class="fSocial__icon"
 												xlink:href="assets/img/sprite.svg#twitter"
 											></use>
 										</svg>
 									</a>
 									<a
-										class="social__link instagram"
+										class="fSocial__link instagram"
 										href="https://www.instagram.com/"
 										target="_blank"
 										rel="noindex, nofollow, noreferrer, noopener"
 									>
-										<svg class="social__svg">
+										<svg class="fSocial__svg">
 											<use
-												class="social__icon"
+												class="fSocial__icon"
 												xlink:href="assets/img/sprite.svg#instagram"
 											></use>
 										</svg>
