js 08 with bugs

--- a/index.html
+++ b/index.html
@@ -382,6 +382,14 @@
 													>Homework_js_07</a
 												>
 											</li>
+											<li class="menu__item">
+												<a
+													class="menu__link"
+													href="JS__HW__08/"
+													target="_blank"
+													>Homework_js_08</a
+												>
+											</li>
 										</ul>
 									</nav>
 								</div>
