--- a/JS__HW__08/index.html
+++ b/JS__HW__08/index.html
@@ -36,7 +36,15 @@
 						</p>
 						<div class="modal__task">
 							<div class="first__text">
-								Lorem, ipsum dolor sit
+								Lorem ipsum dolor sit amet consectetur
+								adipisicing elit. Veritatis sed odio obcaecati
+								perferendis similique exercitationem ullam et
+								tempora ab, blanditiis libero quas maxime
+								numquam amet vel. Soluta eaque accusantium velit
+								veniam fugiat ducimus dignissimos consequuntur
+								odit! Quaerat rerum repudiandae sint praesentium
+								adipisci omnis voluptates in, qui, debitis
+								recusandae quis quae.
 							</div>
 							<textarea
 								class="first__area none"
@@ -61,7 +69,112 @@
 							сортуватися як числа, а не як рядки.
 						</p>
 						<div class="modal__task">
-							<div class="second__text"></div>
+							<h2 class="second__title">Quentin Tarantino's filmography</h2>
+							<table class="second__table">
+								<thead class="second__table-head">
+									<tr class="second__table-head-row">
+										<th scope="col">Year</th>
+										<th scope="col">Title</th>
+										<th scope="col">Running time, min</th>
+										<th scope="col">Distribution</td>
+										<th scope="col">Budget, mlns</th>
+										<th scope="col">Box office, mlns</th>
+										<th scope="col">IMDb rating</th>
+									</tr>
+								</thead>
+								<tbody class="second__table-body">
+									<tr class="second__table-body-row">
+										<td>1992</td>
+										<td>Reservoir Dogs</td>
+										<td>99</td>
+										<td>Miramax</td>
+										<td>1.2</td>
+										<td>3.0</td>
+										<td>8.3</td>
+									</tr>
+									<tr class="second__table-body-row">
+										<td>1994</td>
+										<td>Pulp Fiction</td>
+										<td>154</td>
+										<td>Miramax</td>
+										<td>8.0</td>
+										<td>214.0</td>
+										<td>8.9</td>
+									</tr>
+									<tr class="second__table-body-row">
+										<td>1997</td>
+										<td>Jackie Brown</td>
+										<td>154</td>
+										<td>Miramax</td>
+										<td>12.0</td>
+										<td>74.7</td>
+										<td>7.5</td>
+									</tr>
+									<tr class="second__table-body-row">
+										<td>2003</td>
+										<td>Kill Bill: Volume 1</td>
+										<td>111</td>
+										<td>Miramax</td>
+										<td>30.0</td>
+										<td>180.9</td>
+										<td>8.2</td>
+									</tr>
+									<tr class="second__table-body-row">
+										<td>2004</td>
+										<td>Kill Bill: Volume 2</td>
+										<td>137</td>
+										<td>Miramax</td>
+										<td>30.0</td>
+										<td>152.2</td>
+										<td>8.0</td>
+									</tr>
+									<tr class="second__table-body-row">
+										<td>2007</td>
+										<td>Death Proof</td>
+										<td>113</td>
+										<td>Dimension Films</td>
+										<td>30.0</td>
+										<td>31.1</td>
+										<td>7.0</td>
+									</tr>
+									<tr class="second__table-body-row">
+										<td>2009</td>
+										<td>Inglourious Basterds</td>
+										<td>153</td>
+										<td>Universal Studios</td>
+										<td>70.0</td>
+										<td>321.5</td>
+										<td>8.3</td>
+									</tr>
+									<tr class="second__table-body-row">
+										<td>2012</td>
+										<td>Django Unchained</td>
+										<td>165</td>
+										<td>Sony Pictures Releasing</td>
+										<td>100.0</td>
+										<td>425.4</td>
+										<td>8.4</td>
+									</tr>
+									<tr class="second__table-body-row">
+										<td>2015</td>
+										<td>The Hateful Eight</td>
+										<td>187</td>
+										<td>The Weinstein Company</td>
+										<td>44.0</td>
+										<td>155.7</td>
+										<td>7.8</td>
+									</tr>
+									<tr class="second__table-body-row">
+										<td>2019</td>
+										<td>Once Upon a Time in Hollywood</td>
+										<td>161</td>
+										<td>Sony Pictures Releasing</td>
+										<td>96.0</td>
+										<td>377.4</td>
+										<td>7.6</td>
+									</tr>
+								</tbody>
+							</table>
 						</div>
 						<div class="modal__btn" id="closeBtnSecond">
 							закрити
@@ -79,8 +192,10 @@
 							затиснути мишку в правому нижньому кутку та тягнути
 							її далі.
 						</p>
-						<div class="modal__task">
-							<div class="second__text"></div>
+						<div class="modal__task overflow">
+							<div class="third__text">
+								<div class="third__area"></div>
+								Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores, aut praesentium? Rerum amet fuga fugit molestias velit at placeat. Et nihil quos dignissimos vel magni, modi, nemo, optio nisi explicabo impedit amet. Officia, repellendus similique odio temporibus voluptatum dignissimos inventore in quia fuga provident maiores eaque facere veritatis quos placeat.</div>
 						</div>
 						<div class="modal__btn" id="closeBtnThird">
 							закрити
