slider homework added

--- a/index.html
+++ b/index.html
@@ -390,6 +390,14 @@
 													>Homework_js_08</a
 												>
 											</li>
+											<li class="menu__item">
+												<a
+													class="menu__link"
+													href="OnWave/"
+													target="_blank"
+													>OnWave</a
+												>
+											</li>
 										</ul>
 									</nav>
 								</div>
