--- a/index.html
+++ b/index.html
@@ -398,6 +398,22 @@
 													>OnWave</a
 												>
 											</li>
+											<li class="menu__item">
+												<a
+													class="menu__link"
+													href="MovieDaata_with_AJAX/"
+													target="_blank"
+													>MovieDaata</a
+												>
+											</li>
+											<li class="menu__item">
+												<a
+													class="menu__link"
+													href="Gulp__lesson/"
+													target="_blank"
+													>Gulp</a
+												>
+											</li>
 										</ul>
 									</nav>
 								</div>
