--- a/OnWave/index.html
+++ b/OnWave/index.html
@@ -91,6 +91,11 @@
 			rel="stylesheet"
 		/>
 
+		<link
+			rel="stylesheet"
+			href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
+		/>
+
 		<link rel="stylesheet" href="assets/css/style.css" />
 	</head>
 
@@ -154,8 +159,133 @@
 				</div>
 			</div>
 		</header>
-		<main class="main"></main>
+		<main class="main">
+			<section class="main-slider">
+				<div class="main-slider__container">
+					<div class="main-slider__wrapper">
+						<div class="main-slider__swiper swiper">
+							<div
+								class="main-slider__swiper-wrapper swiper-wrapper"
+							>
+								<div
+									class="main-slider__swiper-slide swiper-slide"
+								>
+									<div class="main-slider__slide-container">
+										<div
+											class="main-slider__background-wrapper"
+										>
+											<picture>
+												<source
+													srcset="
+														assets/img/titleSlide-1.webp
+													"
+													type="image/webp"
+												/>
+												<img
+													class="main-slider__slide-background"
+													width="1400"
+													height="700"
+													src="assets/img/titleSlide-1.png"
+													alt="background"
+												/>
+											</picture>
+										</div>
+										<div class="main-slider__text-wrapper">
+											<h2 class="main-slider__title">
+												Find your own style
+											</h2>
+											<a
+												class="main-slider__btn"
+												href="#"
+											>
+												veiw more
+											</a>
+										</div>
+									</div>
+								</div>
+								<div
+									class="main-slider__swiper-slide swiper-slide"
+								>
+									<div class="main-slider__slide-container">
+										<div
+											class="main-slider__background-wrapper"
+										>
+											<picture>
+												<source
+													srcset="
+														assets/img/titleSlide-2.webp
+													"
+													type="image/webp"
+												/>
+												<img
+													class="main-slider__slide-background"
+													width="1400"
+													height="700"
+													src="assets/img/titleSlide-2.png"
+													alt="background"
+												/>
+											</picture>
+										</div>
+										<div class="main-slider__text-wrapper">
+											<h2 class="main-slider__title">
+												expand your horizons
+											</h2>
+											<a
+												class="main-slider__btn"
+												href="#"
+											>
+												veiw more
+											</a>
+										</div>
+									</div>
+								</div>
+								<div
+									class="main-slider__swiper-slide swiper-slide"
+								>
+									<div class="main-slider__slide-container">
+										<div
+											class="main-slider__background-wrapper"
+										>
+											<picture>
+												<source
+													srcset="
+														assets/img/titleSlide-3.webp
+													"
+													type="image/webp"
+												/>
+												<img
+													class="main-slider__slide-background"
+													width="1400"
+													height="700"
+													src="assets/img/titleSlide-3.png"
+													alt="background"
+												/>
+											</picture>
+										</div>
+										<div class="main-slider__text-wrapper">
+											<h2 class="main-slider__title">
+												discover new options
+											</h2>
+											<a
+												class="main-slider__btn"
+												href="#"
+											>
+												veiw more
+											</a>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div
+								class="main-slider__swiper-pagination swiper-pagination"
+							></div>
+						</div>
+					</div>
+				</div>
+			</section>
+		</main>
 		<footer class="footer"></footer>
+		<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
 		<script src="assets/js/script.js"></script>
 	</body>
 </html>
