--- a/OnWave/index.html
+++ b/OnWave/index.html
@@ -190,6 +190,9 @@
 												/>
 											</picture>
 										</div>
+										<div
+											class="main-slider__gradient"
+										></div>
 										<div class="main-slider__text-wrapper">
 											<h2 class="main-slider__title">
 												Find your own style
@@ -226,6 +229,9 @@
 												/>
 											</picture>
 										</div>
+										<div
+											class="main-slider__gradient"
+										></div>
 										<div class="main-slider__text-wrapper">
 											<h2 class="main-slider__title">
 												expand your horizons
@@ -262,6 +268,9 @@
 												/>
 											</picture>
 										</div>
+										<div
+											class="main-slider__gradient"
+										></div>
 										<div class="main-slider__text-wrapper">
 											<h2 class="main-slider__title">
 												discover new options
@@ -283,8 +292,453 @@
 					</div>
 				</div>
 			</section>
+			<section class="new">
+				<div class="new__container">
+					<div class="new__wrapper">
+						<h2 class="new__title">new arrivals</h2>
+						<div class="new__swiper swiper">
+							<div class="new__swiper-wrapper swiper-wrapper">
+								<div class="new__swiper-slide swiper-slide">
+									<div class="new__swiper-slide-container">
+										<div class="new__swiper-img-wrapper">
+											<picture>
+												<img
+													class="new__swiper-img"
+													width="204"
+													height="300"
+													src="assets/img/guitar-red.png"
+													alt="guitar-red.png"
+												/>
+											</picture>
+										</div>
+										<h3 class="new__swiper-title">
+											Hagstrom Alvar Limited Edition
+										</h3>
+										<div class="new__swiper-cost">
+											€2.990,00
+										</div>
+										<div class="new__swiper-badge">
+											in stock
+										</div>
+									</div>
+								</div>
+								<div class="new__swiper-slide swiper-slide">
+									<div class="new__swiper-slide-container">
+										<div class="new__swiper-img-wrapper">
+											<picture>
+												<img
+													class="new__swiper-img"
+													width="204"
+													height="300"
+													src="assets/img/guitar-blue.png"
+													alt="guitar-blue.png"
+												/>
+											</picture>
+										</div>
+										<h3 class="new__swiper-title">
+											Hagstrom Tremar Viking Deluxe Cloudy
+											Seas
+										</h3>
+										<div class="new__swiper-cost">
+											€1.300,00
+										</div>
+										<div class="new__swiper-badge">
+											in stock
+										</div>
+									</div>
+								</div>
+								<div
+									class="new__swiper-slide swiper-slide sold"
+								>
+									<div class="new__swiper-slide-container">
+										<div class="new__swiper-img-wrapper">
+											<picture>
+												<img
+													class="new__swiper-img"
+													width="204"
+													height="300"
+													src="assets/img/guitar-yellow.png"
+													alt="guitar-yellow.png"
+												/>
+											</picture>
+										</div>
+										<h3 class="new__swiper-title">
+											Gibson Les Paul Standard 60s
+										</h3>
+										<div class="new__swiper-cost">
+											€3.749,00
+										</div>
+										<div class="new__swiper-badge">
+											Sold
+										</div>
+									</div>
+								</div>
+								<div class="new__swiper-slide swiper-slide">
+									<div class="new__swiper-slide-container">
+										<div class="new__swiper-img-wrapper">
+											<picture>
+												<img
+													class="new__swiper-img"
+													width="204"
+													height="300"
+													src="assets/img/guitar-white.png"
+													alt="guitar-white.png"
+												/>
+											</picture>
+										</div>
+										<h3 class="new__swiper-title">
+											Suhr Standard Plus Trans Blue Denim
+										</h3>
+										<div class="new__swiper-cost">
+											€3.449,00
+										</div>
+										<div class="new__swiper-badge">
+											in stock
+										</div>
+									</div>
+								</div>
+								<div class="new__swiper-slide swiper-slide">
+									<div class="new__swiper-slide-container">
+										<div class="new__swiper-img-wrapper">
+											<picture>
+												<img
+													class="new__swiper-img"
+													width="204"
+													height="300"
+													src="assets/img/guitar-black.png"
+													alt="guitar-black.png"
+												/>
+											</picture>
+										</div>
+										<h3 class="new__swiper-title">
+											Fender Telecaster Black Paisley
+											Limited Edition
+										</h3>
+										<div class="new__swiper-cost">
+											€1.499,00
+										</div>
+										<div class="new__swiper-badge">
+											in stock
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="new__swiper-pagination"></div>
+						</div>
+						<div class="new__swiper-button-container">
+							<div
+								class="new__swiper-button new__swiper-button--prev"
+							>
+								<svg class="new__swiper-button-svg">
+									<use
+										class="new__swiper-button-ico"
+										xlink:href="assets/img/sprite.svg#arrow-prev"
+									></use>
+								</svg>
+							</div>
+							<div
+								class="new__swiper-button new__swiper-button--next"
+							>
+								<svg class="new__swiper-button-svg">
+									<use
+										class="new__swiper-button-ico"
+										xlink:href="assets/img/sprite.svg#arrow-next"
+									></use>
+								</svg>
+							</div>
+						</div>
+						<div class="new__btn-wrapper">
+							<a class="new__btn" href="#">View more</a>
+						</div>
+					</div>
+				</div>
+			</section>
+			<section class="brands">
+				<div class="brands__container">
+					<div class="brands__wrapper">
+						<h2 class="brands__title">
+							our partners
+						</h2>
+					</div>
+					<div class="brands__swiper swiper">
+						<div class="brands__swiper-wrapper swiper-wrapper">
+							<div class="brands__swiper-slide swiper-slide">
+								<div class="brands__swiper-slide-container">
+									<picture>
+										<img
+											class="brands__swiper-img"
+											width="100"
+											height="35"
+											src="assets/img/epiphone.png"
+											alt="epiphone.png"
+										/>
+									</picture>
+								</div>
+							</div>
+							<div class="brands__swiper-slide swiper-slide">
+								<div class="brands__swiper-slide-container">
+									<picture>
+										<img
+											class="brands__swiper-img"
+											width="100"
+											height="43"
+											src="assets/img/esp.png"
+											alt="esp.png"
+										/>
+									</picture>
+								</div>
+							</div>
+							<div class="brands__swiper-slide swiper-slide">
+								<div class="brands__swiper-slide-container">
+									<picture>
+										<img
+											class="brands__swiper-img"
+											width="100"
+											height="64"
+											src="assets/img/gibson.png"
+											alt="gibson.png"
+										/>
+									</picture>
+								</div>
+							</div>
+							<div class="brands__swiper-slide swiper-slide">
+								<div class="brands__swiper-slide-container">
+									<picture>
+										<img
+											class="brands__swiper-img"
+											width="100"
+											height="34"
+											src="assets/img/engl.png"
+											alt="engl.png"
+										/>
+									</picture>
+								</div>
+							</div>
+							<div class="brands__swiper-slide swiper-slide">
+								<div class="brands__swiper-slide-container">
+									<picture>
+										<img
+											class="brands__swiper-img"
+											width="100"
+											height="15"
+											src="assets/img/roland.png"
+											alt="roland.png"
+										/>
+									</picture>
+								</div>
+							</div>
+							<div class="brands__swiper-slide swiper-slide">
+								<div class="brands__swiper-slide-container">
+									<picture>
+										<img
+											class="brands__swiper-img"
+											width="100"
+											height="66"
+											src="assets/img/fender.png"
+											alt="fender.png"
+										/>
+									</picture>
+								</div>
+							</div>
+							<div class="brands__swiper-slide swiper-slide">
+								<div class="brands__swiper-slide-container">
+									<picture>
+										<img
+											class="brands__swiper-img"
+											width="100"
+											height="60"
+											src="assets/img/peavey.png"
+											alt="peavey.png"
+										/>
+									</picture>
+								</div>
+							</div>
+							<div class="brands__swiper-slide swiper-slide">
+								<div class="brands__swiper-slide-container">
+									<picture>
+										<img
+											class="brands__swiper-img"
+											width="100"
+											height="26"
+											src="assets/img/marshal.png"
+											alt="marshal.png"
+										/>
+									</picture>
+								</div>
+							</div>
+							<div class="brands__swiper-slide swiper-slide">
+								<div class="brands__swiper-slide-container">
+									<picture>
+										<img
+											class="brands__swiper-img"
+											width="100"
+											height="29"
+											src="assets/img/orange.png"
+											alt="orange.png"
+										/>
+									</picture>
+								</div>
+							</div>
+						</div>
+						<div class="brands__swiper-pagination"></div>
+					</div>
+					<div class="brands__swiper-button-container">
+						<div
+							class="brands__swiper-button brands__swiper-button--prev"
+						>
+							<svg class="brands__swiper-button-svg">
+								<use
+									class="brands__swiper-button-ico"
+									xlink:href="assets/img/sprite.svg#arrow-prev"
+								></use>
+							</svg>
+						</div>
+						<div
+							class="brands__swiper-button brands__swiper-button--next"
+						>
+							<svg class="brands__swiper-button-svg">
+								<use
+									class="brands__swiper-button-ico"
+									xlink:href="assets/img/sprite.svg#arrow-next"
+								></use>
+							</svg>
+						</div>
+					</div>
+				</div>
+			</section>
 		</main>
-		<footer class="footer"></footer>
+		<footer class="footer">
+			<div class="footer__container">
+				<div class="footer__wrapper">
+					<div
+						class="footer__logo-wrapper footer__logo-wrapper--mobile"
+					>
+						<a class="footer__logo" href="#">
+							<svg class="footer__logo-svg">
+								<use
+									class="footer__logo-icon"
+									xlink:href="assets/img/sprite.svg#logo"
+								></use>
+							</svg>
+						</a>
+					</div>
+					<div class="footer__content-wrapper">
+						<div class="footer__left-section">
+							<div
+								class="footer__logo-wrapper footer__logo-wrapper--dasktop"
+							>
+								<a class="footer__logo" href="#">
+									<svg class="footer__logo-svg">
+										<use
+											class="footer__logo-icon"
+											xlink:href="assets/img/sprite.svg#logo"
+										></use>
+									</svg>
+								</a>
+							</div>
+							<nav class="footer__menu">
+								<ul class="footer__menu-list">
+									<li class="footer__menu-item">
+										<a class="footer__menu-link" href="#">
+											<span>Home</span>
+										</a>
+									</li>
+									<li class="footer__menu-item">
+										<a class="footer__menu-link" href="#">
+											<span>Catalog</span>
+										</a>
+									</li>
+									<li class="footer__menu-item">
+										<a class="footer__menu-link" href="#">
+											<span>News</span></a
+										>
+									</li>
+									<li class="footer__menu-item">
+										<a class="footer__menu-link" href="#">
+											<span>Contacts</span>
+										</a>
+									</li>
+								</ul>
+							</nav>
+						</div>
+						<div class="footer__right-section">
+							<h3 class="footer__title">Contact Us</h3>
+							<div class="footer__link-bar">
+								<a
+									class="footer__link"
+									href="https://www.instagram.com/"
+									target="_blank"
+									rel="noindex, nofollow, noreferrer, noopener"
+								>
+									<svg class="footer__link-svg">
+										<use
+											class="footer__link-icon"
+											xlink:href="assets/img/sprite.svg#instagram"
+										></use>
+									</svg>
+								</a>
+								<a
+									class="footer__link"
+									href="https://www.facebook.com/"
+									target="_blank"
+									rel="noindex, nofollow, noreferrer, noopener"
+								>
+									<svg class="footer__link-svg">
+										<use
+											class="footer__link-icon"
+											xlink:href="assets/img/sprite.svg#facebook"
+										></use>
+									</svg>
+								</a>
+								<a
+									class="footer__link"
+									href="https://www.pinterest.com/"
+									target="_blank"
+									rel="noindex, nofollow, noreferrer, noopener"
+								>
+									<svg class="footer__link-svg">
+										<use
+											class="footer__link-icon"
+											xlink:href="assets/img/sprite.svg#pinterest"
+										></use>
+									</svg>
+								</a>
+								<a
+									class="footer__link"
+									href="https://twitter.com/"
+									target="_blank"
+									rel="noindex, nofollow, noreferrer, noopener"
+								>
+									<svg class="footer__link-svg">
+										<use
+											class="footer__link-icon--another"
+											xlink:href="assets/img/sprite.svg#twitter"
+										></use>
+									</svg>
+								</a>
+								<a
+									class="footer__link"
+									href="https://www.youtube.com/"
+									target="_blank"
+									rel="noindex, nofollow, noreferrer, noopener"
+								>
+									<svg class="footer__link-svg">
+										<use
+											class="footer__link-icon--another"
+											xlink:href="assets/img/sprite.svg#youtube"
+										></use>
+									</svg>
+								</a>
+							</div>
+							<div class="footer__phone">0800 300 4040</div>
+						</div>
+					</div>
+					<div class="footer__copyright">
+						© Copyright 2022. All rights reserved.
+					</div>
+				</div>
+			</div>
+		</footer>
 		<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
 		<script src="assets/js/script.js"></script>
 	</body>
