--- a/index.html
+++ b/index.html
@@ -409,6 +409,14 @@
 											<li class="menu__item">
 												<a
 													class="menu__link"
+													href="Weather_Forecast_new/"
+													target="_blank"
+													>Weather Cookie</a
+												>
+											</li>
+											<li class="menu__item">
+												<a
+													class="menu__link"
 													href="Gulp__lesson/"
 													target="_blank"
 													>Gulp</a
