--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
 													class="menu__link"
 													href="MovieDaata_with_AJAX/"
 													target="_blank"
-													>MovieDaata</a
+													>MovieData</a
 												>
 											</li>
 											<li class="menu__item">
