--- a/Weather_Forecast_new/index.html
+++ b/Weather_Forecast_new/index.html
@@ -24,7 +24,7 @@
                     <ul>
                         <li>
                             <p class="sity">Lisbon</p>
-                            <p class="temp">1</p>
+                            <p class="temp"></p>
                         </li>
                         <li>
                             <p class="sity">Paris</p>
