--- a/MovieDaata_with_AJAX/index.html
+++ b/MovieDaata_with_AJAX/index.html
@@ -100,7 +100,7 @@
 				<div class="header__wrapper">
 					<form
 						class="header__form"
-						action="http://www.omdbapi.com/?apikey=79bad6da&"
+						action="https://www.omdbapi.com/?apikey=79bad6da&"
 						method="GET"
 						autocomplete="off"
 						id="searchForm"
